# env-studio-board

./: .gitignore  Cargo.toml  README.md
src/: config.rs  db.rs  main.rs  models.rs  seed.rs
src/routes/: api.rs  web.rs
src/services/: board.rs  dashboard.rs
static/: styles.css
templates/: board_detail.html  boards.html  dashboard.html  layout.html  new_item.html
tests/: api_notes.md  manual_checklist.md
