[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = "0.12"
axum = "0.7"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tower-http = { version = "0.6", features = ["fs"] }
